# mathematical

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  test.py  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt
doc-source/api/: data_frames.rst  linear_regression.rst  outliers.rst  stats.rst  utils.rst
mathematical/: __init__.py  data_frames.py  linear_regression.py  outliers.py  stats.py  utils.py
tests/: __init__.py  requirements.txt  test_data_frames.py  test_frange.py  test_linear_regression.py  test_outliers.py  test_stats.py  test_utils.py
tests/test_outliers_/: test_mad_outliers_2_data3_.yml  test_mad_outliers_3_data5_.yml  test_quartile_outliers_data0_.yml  test_quartile_outliers_data1_.yml  test_quartile_outliers_data2_.yml  test_quartile_outliers_data4_.yml  test_quartile_outliers_data5_.yml  test_spss_outliers_data0_.yml  test_spss_outliers_data1_.yml  test_spss_outliers_data2_.yml  test_spss_outliers_data3_.yml  test_spss_outliers_data4_.yml  test_spss_outliers_data5_.yml  test_two_stdev_data1_.yml  test_two_stdev_data2_.yml  test_two_stdev_data3_.yml  test_two_stdev_data4_.yml  test_two_stdev_data5_.yml
