[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "mathematical"
version = "0.4.0"
description = "Mathematical tools for Python 📐 🐍 🛠️"
readme = "README.rst"
keywords = [ "mathematics", "utilities",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/mathematical"
"Issue Tracker" = "https://github.com/domdfcoding/mathematical/issues"
"Source Code" = "https://github.com/domdfcoding/mathematical"
Documentation = "https://mathematical.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
