[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "mathematical"
version = "0.5.1"
description = "Mathematical tools for Python 📐 🐍 🛠️"
readme = "README.rst"
keywords = [ "mathematics", "utilities",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/mathematical"
"Issue Tracker" = "https://github.com/domdfcoding/mathematical/issues"
"Source Code" = "https://github.com/domdfcoding/mathematical"
Documentation = "https://mathematical.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "mathematical"
author = "Dominic Davis-Foster"
project = "mathematical"
copyright = "2019-2021 Dominic Davis-Foster"
language = "en"
package_root = "mathematical"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinxcontrib.toctree_plus",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinx_debuginfo",
    "sphinx_licenseinfo",
    "seed_intersphinx_mapping",
    "html_section",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
html_codeblock_linenos_style = "table"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.mypy]
python_version = "3.7"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
